apps/base/issuary-legacy/issuary.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth-ingress-route
  namespace: tinyauth-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.winetree94.com`)
      kind: Rule
      services:
        - name: tinyauth-service
          port: 8080
  tls:
    secretName: letsencrypt-cert
